@@ -1,3 +1,4 @@
+* More Initial convergence improvements from Dave Mills.
 (4.2.7p52) 2010/09/19 Released by Harlan Stenn <stenn@ntp.org>
 * Initial convergence improvements from Dave Mills.
 (4.2.7p51) 2010/09/18 Released by Harlan Stenn <stenn@ntp.org>
